beginning of the end

--- a/src/shared/Components/Navbar/navbar.css
+++ b/src/shared/Components/Navbar/navbar.css
@@ -9,8 +9,9 @@
 }
 
 .navbar__content {
-    height: 100px;
+    height: 70px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
