--- a/src/shared/Components/WorkOrders/workorders.css
+++ b/src/shared/Components/WorkOrders/workorders.css
@@ -77,7 +77,7 @@ td {
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.15);
     border-radius: 7px;
     min-width: 700px;
-    min-height: 160px;
+    height: 600px;
     max-width: 80%;
     padding: 24px;
     margin-bottom: 25px;
