--- a/src/shared/Components/WorkOrders/workorders.css
+++ b/src/shared/Components/WorkOrders/workorders.css
@@ -23,7 +23,7 @@
     min-height: 470px;
 }
 
-.mainTopbar {
+.mainTopBar {
     margin-top: 30px;
     display: flex;
     justify-content: space-between;
